--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
     <div id="apiResult">OLA</div>
 
+    <hr />
+
+    <p id="userName"></p>
+    <p id="userCity"></p>
+    <p id="userID"></p>
+    <img src="" id="userAvatar">
+
     <script src="./main.js"></script>
     
 </body>
